--- a/app/templates/skills/_skill_toggle_form.html
+++ b/app/templates/skills/_skill_toggle_form.html
@@ -4,11 +4,18 @@
   method="post"
 >
   <input type="hidden" name="skill_id" value="{{ skill_data.skill_id }}" />
-  {{ skill_data.form.hidden_tag() }} {% if skill_data.form.is_featured.data %}
-  <button type="submit" class="btn btn-outline-danger">
-    Remove from Featured
-  </button>
+  {{ skill_data.form.hidden_tag() }}
+  {% if current_user.is_admin %}
+  {% if skill_data.form.is_featured.data %}
+    <button type="submit" class="btn btn-outline-danger">Remove from Featured</button>
   {% else %}
-  <button type="submit" class="btn btn-outline-success">Add to Featured</button>
+    <button type="submit" class="btn btn-outline-success">Add to Featured</button>
+  {% endif %}
+  {% else %}
+  {% if skill_data.form.is_featured.data %}
+    <button type="submit" class="btn btn-outline-danger" disabled>Remove from Featured</button>
+  {% else %}
+    <button type="submit" class="btn btn-outline-success" disabled>Add to Featured</button>
+  {% endif %}
   {% endif %}
 </form>
