--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,7 +32,7 @@
     <!-- Fonts -->
     {% include 'default/fonts.html' %} {% block css %}{% endblock %}
   </head>
-  <body class="{{ body_class|default('text-light bg-dark') }}">
+  <body class="{{ body_class|default('text-light bg-dark about-bg') }}">
     <header>
       {% include 'default/nav/main.html' %}
     </header>
