--- a/app/templates/default/account.html
+++ b/app/templates/default/account.html
@@ -1,52 +1,50 @@
-{% extends "base.html" %} {% from "utils/macros.html" import render_form %} {% block
-title %} Account - ZDP {% endblock %} {% block content %}
+{% extends "base.html" %} {% from "utils/macros.html" import render_form %} {%
+block title %} Account - ZDP {% endblock %} {% block content %}
 <section class="row">
-  <article class="col-md-6">
-    <div class="mt-4" id="account_info">
-      <h2>Account Information</h2>
-      <p><strong>Username:</strong> {{ current_user.username }}</p>
-      <p><strong>Email:</strong> {{ current_user.email }}</p>
-      {% if not current_user.verified %}
-      <p>
-        Your email is not verified.
-        <a
-          href="{{ url_for('auth_routes.send_verification_email') }}"
-          class="btn btn-primary"
-          >Send Verification Email</a
-        >
-      </p>
-      {% endif %}
-    </div>
-    <div class="mt-4" id="change_password">
-      <h2>Change Password</h2>
-      {{ render_form(form, 'auth_routes.account', 'Change Password') }}
-    </div>
-    <div class="mt-4" id="message_admin">
-      <h2>Message Admin</h2>
+  <div class="mt-4" id="account_info">
+    <h2>Account Information</h2>
+    <p><strong>Username:</strong> {{ current_user.username }}</p>
+    <p><strong>Email:</strong> {{ current_user.email }}</p>
+    {% if not current_user.verified %}
+    <p>
+      Your email is not verified.
+      <a
+        href="{{ url_for('auth_routes.send_verification_email') }}"
+        class="btn btn-primary"
+        >Send Verification Email</a
+      >
+    </p>
+    {% endif %}
+  </div>
+  <div class="mt-4" id="change_password">
+    <h2>Change Password</h2>
+    {{ render_form(form, 'auth_routes.account', 'Change Password') }}
+  </div>
+  <div class="mt-4" id="message_admin">
+    <h2>Message Admin</h2>
 
-      {% if current_user.has_role('ADMIN') %}
-      <h3>Received Messages</h3>
-      <ul>
-        {% for message in messages %}
-        <li>
-          {{ message.message_body }}
-          <form
-            action="{{ url_for('main_routes.mark_as_read', message_id=message.id) }}"
-            method="post"
-          >
-            <button type="submit">Mark as Read</button>
-          </form>
-        </li>
-        {% endfor %}
-      </ul>
-      {% elif current_user.verified %} {% if existing_message %}
-      <p>You have already sent a message.</p>
-      {{ render_form(message_form, 'main_routes.edit_message', 'Edit Message')
-      }} {% else %} {{ render_form(message_form, 'main_routes.send_message',
-      'Send Message') }} {% endif %} {% else %}
-      <p>Please verify your account to send messages to admin.</p>
-      {% endif %}
-    </div>
-  </article>
+    {% if current_user.has_role('ADMIN') %}
+    <h3>Received Messages</h3>
+    <ul>
+      {% for message in messages %}
+      <li>
+        {{ message.message_body }}
+        <form
+          action="{{ url_for('main_routes.mark_as_read', message_id=message.id) }}"
+          method="post"
+        >
+          <button type="submit">Mark as Read</button>
+        </form>
+      </li>
+      {% endfor %}
+    </ul>
+    {% elif current_user.verified %} {% if existing_message %}
+    <p>You have already sent a message.</p>
+    {{ render_form(message_form, 'main_routes.edit_message', 'Edit Message') }}
+    {% else %} {{ render_form(message_form, 'main_routes.send_message', 'Send
+    Message') }} {% endif %} {% else %}
+    <p>Please verify your account to send messages to admin.</p>
+    {% endif %}
+  </div>
 </section>
 {% endblock %}
