--- a/app/templates/about/main.html
+++ b/app/templates/about/main.html
@@ -4,7 +4,7 @@
   href="{{ url_for('static', filename='styles/about.css') }}"
 />
 {% endblock %} {% block content %}
-<div class="container mt-5">
+<div class="container text-success mt-5">
   <!-- First Row: About Intro and Image -->
   <div class="row">
     <!-- About Intro -->
