--- a/app/templates/skills/_skill_association_form.html
+++ b/app/templates/skills/_skill_association_form.html
@@ -1,4 +1,5 @@
 <!-- Skill Association Form -->
+{{ current_user.roles }}
 <form
   method="post"
   action="{{ url_for('skill_routes.associate_skill', skill_id=skill_data.skill_id) }}"
@@ -38,7 +39,7 @@
     </select>
   </div>
   <div class="col-md-2">
-    {% if current_user.is_admin %}
+    {% if current_user.has_role('ADMIN') %}
     <button type="submit" class="btn btn-outline-dark">Associate</button>
     {% else %}
     <button type="submit" class="btn btn-outline-dark" disabled>Associate</button>
