--- a/app/templates/resume/main.html
+++ b/app/templates/resume/main.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %} {% block css %}
 <link
   rel="stylesheet"
-  href="{{ url_for('static', filename='styles/edu.css', v='1.0') }}"
+  href="{{ url_for('static', filename='styles/resume.css', v='1.0') }}"
 />
 <link
   rel="stylesheet"
